--- a/src/styles.css
+++ b/src/styles.css
@@ -11,9 +11,15 @@ body {
 }
 
 .canvas {
+    padding: 0;
+    margin: auto;
     display: block;
     border: 3px solid #ff0000;
     z-index: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
 
 .debug-window {
